data/derived/fa15/progs/unify/prog3539.ml.out
Characters 387-388:
  | Power(a, b)     -> x + y;;
                       ^
Error: This expression has type float but an expression was expected of type
         int
